--- a/register.html
+++ b/register.html
@@ -125,7 +125,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		   </div>
 		   <div class="sub-cate">
 				<div class=" top-nav rsidebar span_1_of_left">
-					<h3 class="cate">CATEGORIES</h3>
+					<h3 class="cate">分类</h3>
 		 <ul class="menu">
 		<li class="item1"><a href="#">Curabitur sapien<img class="arrow-img" src="images/arrow1.png" alt=""/> </a>
 			<ul class="cute">
