--- a/single.html
+++ b/single.html
@@ -17,7 +17,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
     <!--fonts-->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <!--<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>-->
     <!--//fonts-->
     <script src="js/jquery.min.js"></script>
 
@@ -94,7 +94,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <li><a href="login.html"><span> </span>登陆</a></li> |
                         <li ><a href="register.html">注册</a></li>
                     </ul>
-                    <div class="cart"><a href="#"><span> </span>购物车</a></div>
+                    <div class="cart"><a href="shopcart.html"><span> </span>购物车</a></div>
                     <div class="clearfix"> </div>
                 </div>
                 <div class="clearfix"> </div>
